--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,6 @@ dependencies = [
     "anthropic>=0.59.0",
     "httpx>=0.28.1",
     "mcp[cli]>=1.12.1",
-    "openai>=1.97.1",
+    "openai==0.28",
     "python-dotenv>=1.1.1",
 ]
